// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapContainer matches the snapshot with draw controls hidden 1`] = `
<DocumentFragment>
  <div
    class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
    id="myMap"
    style="height: 100%; position: relative;"
    tabindex="0"
  >
    <div
      class="leaflet-pane leaflet-map-pane"
      style="left: 0px; top: 0px;"
    >
      <div
        class="leaflet-pane leaflet-tile-pane"
      >
        <div
          class="leaflet-layer "
          style="z-index: 2;"
        >
          <div
            class="leaflet-tile-container leaflet-zoom-animated"
            style="z-index: 18; left: 0px; top: 0px;"
          >
            <img
              alt=""
              class="leaflet-tile"
              src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/5/10/4"
              style="width: 256px; height: 256px; left: -159px; top: -31px;"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-pane leaflet-overlay-pane"
      />
      <div
        class="leaflet-pane leaflet-shadow-pane"
      />
      <div
        class="leaflet-pane leaflet-marker-pane"
      />
      <div
        class="leaflet-pane leaflet-tooltip-pane"
      />
      <div
        class="leaflet-pane leaflet-popup-pane"
      />
    </div>
    <div
      class="leaflet-control-container"
    >
      <div
        class="leaflet-top leaflet-left"
      >
        <div
          class="leaflet-control-zoom leaflet-bar leaflet-control"
        >
          <a
            aria-disabled="false"
            aria-label="Zoom in"
            class="leaflet-control-zoom-in"
            href="#"
            role="button"
            title="Zoom in"
          >
            <span
              aria-hidden="true"
            >
              +
            </span>
          </a>
          <a
            aria-disabled="false"
            aria-label="Zoom out"
            class="leaflet-control-zoom-out"
            href="#"
            role="button"
            title="Zoom out"
          >
            <span
              aria-hidden="true"
            >
              −
            </span>
          </a>
        </div>
        <div
          class="leaflet-control-fullscreen leaflet-bar leaflet-control"
        >
          <a
            class="leaflet-control-fullscreen-button leaflet-bar-part"
            href="#"
            title="View Fullscreen"
          />
        </div>
      </div>
      <div
        class="leaflet-top leaflet-right"
      />
      <div
        class="leaflet-bottom leaflet-left"
      />
      <div
        class="leaflet-bottom leaflet-right"
      >
        <div
          aria-haspopup="true"
          class="leaflet-control-layers leaflet-control"
        >
          <a
            class="leaflet-control-layers-toggle"
            href="#"
            role="button"
            title="Layers"
          />
          <section
            class="leaflet-control-layers-list"
          >
            <div
              class="leaflet-control-layers-base"
            >
              <label>
                <span>
                  <input
                    class="leaflet-control-layers-selector"
                    name="leaflet-base-layers_126"
                    type="radio"
                  />
                  <span>
                     BC Government
                  </span>
                </span>
              </label>
              <label>
                <span>
                  <input
                    checked="checked"
                    class="leaflet-control-layers-selector"
                    name="leaflet-base-layers_126"
                    type="radio"
                  />
                  <span>
                     Esri Imagery
                  </span>
                </span>
              </label>
            </div>
            <div
              class="leaflet-control-layers-separator"
              style="display: none;"
            />
            <div
              class="leaflet-control-layers-overlays"
            />
          </section>
        </div>
        <div
          class="leaflet-control-attribution leaflet-control"
        >
          <a
            href="https://leafletjs.com"
            title="A JavaScript library for interactive maps"
          >
            <svg
              aria-hidden="true"
              class="leaflet-attribution-flag"
              height="8"
              viewBox="0 0 12 8"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h12v4H0z"
                fill="#4C7BE1"
              />
              <path
                d="M0 4h12v3H0z"
                fill="#FFD500"
              />
              <path
                d="M0 7h12v1H0z"
                fill="#E0BC00"
              />
            </svg>
             Leaflet
          </a>
           
          <span
            aria-hidden="true"
          >
            |
          </span>
           © 
          <a
            href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
          >
            ESRI Basemap
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MapContainer matches the snapshot with feature popup 1`] = `
<DocumentFragment>
  <div
    class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
    id="myMap"
    style="height: 100%; position: relative;"
    tabindex="0"
  >
    <div
      class="leaflet-pane leaflet-map-pane"
      style="left: 0px; top: 0px;"
    >
      <div
        class="leaflet-pane leaflet-tile-pane"
      >
        <div
          class="leaflet-layer "
          style="z-index: 2;"
        >
          <div
            class="leaflet-tile-container leaflet-zoom-animated"
            style="z-index: 18; left: 0px; top: 0px;"
          >
            <img
              alt=""
              class="leaflet-tile"
              src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/5/10/4"
              style="width: 256px; height: 256px; left: -159px; top: -31px;"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-pane leaflet-overlay-pane"
      >
        <svg
          height="0"
          pointer-events="none"
          style="left: 0px; top: 0px;"
          viewBox="0 0 0 0"
          width="0"
        >
          <g>
            <path
              class="leaflet-interactive"
              d="M1 -3L0 0L0 -3z"
              fill="#3388ff"
              fill-opacity="0.2"
              fill-rule="evenodd"
              stroke="#3388ff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-opacity="1"
              stroke-width="3"
            />
          </g>
        </svg>
      </div>
      <div
        class="leaflet-pane leaflet-shadow-pane"
      >
        <img
          alt=""
          class="leaflet-marker-shadow leaflet-zoom-hide"
          src="marker-shadow.png"
          style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 5771px; top: 1274px;"
        />
      </div>
      <div
        class="leaflet-pane leaflet-marker-pane"
      >
        <img
          alt="Marker"
          class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
          role="button"
          src="marker-icon.png"
          style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 5771px; top: 1274px; z-index: 1274;"
          tabindex="0"
        />
      </div>
      <div
        class="leaflet-pane leaflet-tooltip-pane"
      />
      <div
        class="leaflet-pane leaflet-popup-pane"
      />
    </div>
    <div
      class="leaflet-control-container"
    >
      <div
        class="leaflet-top leaflet-left"
      >
        <div
          class="leaflet-control-zoom leaflet-bar leaflet-control"
        >
          <a
            aria-disabled="false"
            aria-label="Zoom in"
            class="leaflet-control-zoom-in"
            href="#"
            role="button"
            title="Zoom in"
          >
            <span
              aria-hidden="true"
            >
              +
            </span>
          </a>
          <a
            aria-disabled="false"
            aria-label="Zoom out"
            class="leaflet-control-zoom-out"
            href="#"
            role="button"
            title="Zoom out"
          >
            <span
              aria-hidden="true"
            >
              −
            </span>
          </a>
        </div>
        <div
          class="leaflet-control-fullscreen leaflet-bar leaflet-control"
        >
          <a
            class="leaflet-control-fullscreen-button leaflet-bar-part"
            href="#"
            title="View Fullscreen"
          />
        </div>
      </div>
      <div
        class="leaflet-top leaflet-right"
      >
        <div
          class="leaflet-draw leaflet-control"
        >
          <div
            class="leaflet-draw-section"
          >
            <div
              class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top"
            >
              <a
                class="leaflet-draw-draw-polygon"
                href="#"
                title="Draw a polygon"
              >
                <span
                  class="sr-only"
                >
                  Draw a polygon
                </span>
              </a>
              <a
                class="leaflet-draw-draw-rectangle"
                href="#"
                title="Draw a rectangle"
              >
                <span
                  class="sr-only"
                >
                  Draw a rectangle
                </span>
              </a>
              <a
                class="leaflet-draw-draw-marker"
                href="#"
                title="Draw a marker"
              >
                <span
                  class="sr-only"
                >
                  Draw a marker
                </span>
              </a>
            </div>
            <ul
              class="leaflet-draw-actions"
            />
          </div>
          <div
            class="leaflet-draw-section"
          >
            <div
              class="leaflet-draw-toolbar leaflet-bar"
            >
              <a
                class="leaflet-draw-edit-edit"
                href="#"
                title="Edit layers"
              >
                <span
                  class="sr-only"
                >
                  Edit layers
                </span>
              </a>
              <a
                class="leaflet-draw-edit-remove"
                href="#"
                title="Delete layers"
              >
                <span
                  class="sr-only"
                >
                  Delete layers
                </span>
              </a>
            </div>
            <ul
              class="leaflet-draw-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-bottom leaflet-left"
      />
      <div
        class="leaflet-bottom leaflet-right"
      >
        <div
          aria-haspopup="true"
          class="leaflet-control-layers leaflet-control"
        >
          <a
            class="leaflet-control-layers-toggle"
            href="#"
            role="button"
            title="Layers"
          />
          <section
            class="leaflet-control-layers-list"
          >
            <div
              class="leaflet-control-layers-base"
            >
              <label>
                <span>
                  <input
                    class="leaflet-control-layers-selector"
                    name="leaflet-base-layers_110"
                    type="radio"
                  />
                  <span>
                     BC Government
                  </span>
                </span>
              </label>
              <label>
                <span>
                  <input
                    checked="checked"
                    class="leaflet-control-layers-selector"
                    name="leaflet-base-layers_110"
                    type="radio"
                  />
                  <span>
                     Esri Imagery
                  </span>
                </span>
              </label>
            </div>
            <div
              class="leaflet-control-layers-separator"
              style="display: none;"
            />
            <div
              class="leaflet-control-layers-overlays"
            />
          </section>
        </div>
        <div
          class="leaflet-control-attribution leaflet-control"
        >
          <a
            href="https://leafletjs.com"
            title="A JavaScript library for interactive maps"
          >
            <svg
              aria-hidden="true"
              class="leaflet-attribution-flag"
              height="8"
              viewBox="0 0 12 8"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h12v4H0z"
                fill="#4C7BE1"
              />
              <path
                d="M0 4h12v3H0z"
                fill="#FFD500"
              />
              <path
                d="M0 7h12v1H0z"
                fill="#E0BC00"
              />
            </svg>
             Leaflet
          </a>
           
          <span
            aria-hidden="true"
          >
            |
          </span>
           © 
          <a
            href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
          >
            ESRI Basemap
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MapContainer matches the snapshot with geometries being passed in 1`] = `
<DocumentFragment>
  <div
    class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
    id="myMap"
    style="height: 100%; position: relative;"
    tabindex="0"
  >
    <div
      class="leaflet-pane leaflet-map-pane"
      style="left: 0px; top: 0px;"
    >
      <div
        class="leaflet-pane leaflet-tile-pane"
      >
        <div
          class="leaflet-layer "
          style="z-index: 2;"
        >
          <div
            class="leaflet-tile-container leaflet-zoom-animated"
            style="z-index: 18; left: 0px; top: 0px;"
          >
            <img
              alt=""
              class="leaflet-tile"
              src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/5/10/4"
              style="width: 256px; height: 256px; left: -159px; top: -31px;"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-pane leaflet-overlay-pane"
      >
        <svg
          height="0"
          pointer-events="none"
          style="left: 0px; top: 0px;"
          viewBox="0 0 0 0"
          width="0"
        >
          <g>
            <path
              class="leaflet-interactive"
              d="M1 -3L0 0L0 -3z"
              fill="#3388ff"
              fill-opacity="0.2"
              fill-rule="evenodd"
              stroke="#3388ff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-opacity="1"
              stroke-width="3"
            />
          </g>
        </svg>
      </div>
      <div
        class="leaflet-pane leaflet-shadow-pane"
      />
      <div
        class="leaflet-pane leaflet-marker-pane"
      />
      <div
        class="leaflet-pane leaflet-tooltip-pane"
      />
      <div
        class="leaflet-pane leaflet-popup-pane"
      />
    </div>
    <div
      class="leaflet-control-container"
    >
      <div
        class="leaflet-top leaflet-left"
      >
        <div
          class="leaflet-control-zoom leaflet-bar leaflet-control"
        >
          <a
            aria-disabled="false"
            aria-label="Zoom in"
            class="leaflet-control-zoom-in"
            href="#"
            role="button"
            title="Zoom in"
          >
            <span
              aria-hidden="true"
            >
              +
            </span>
          </a>
          <a
            aria-disabled="false"
            aria-label="Zoom out"
            class="leaflet-control-zoom-out"
            href="#"
            role="button"
            title="Zoom out"
          >
            <span
              aria-hidden="true"
            >
              −
            </span>
          </a>
        </div>
        <div
          class="leaflet-control-fullscreen leaflet-bar leaflet-control"
        >
          <a
            class="leaflet-control-fullscreen-button leaflet-bar-part"
            href="#"
            title="View Fullscreen"
          />
        </div>
      </div>
      <div
        class="leaflet-top leaflet-right"
      >
        <div
          class="leaflet-draw leaflet-control"
        >
          <div
            class="leaflet-draw-section"
          >
            <div
              class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top"
            >
              <a
                class="leaflet-draw-draw-polygon"
                href="#"
                title="Draw a polygon"
              >
                <span
                  class="sr-only"
                >
                  Draw a polygon
                </span>
              </a>
              <a
                class="leaflet-draw-draw-rectangle"
                href="#"
                title="Draw a rectangle"
              >
                <span
                  class="sr-only"
                >
                  Draw a rectangle
                </span>
              </a>
              <a
                class="leaflet-draw-draw-marker"
                href="#"
                title="Draw a marker"
              >
                <span
                  class="sr-only"
                >
                  Draw a marker
                </span>
              </a>
            </div>
            <ul
              class="leaflet-draw-actions"
            />
          </div>
          <div
            class="leaflet-draw-section"
          >
            <div
              class="leaflet-draw-toolbar leaflet-bar"
            >
              <a
                class="leaflet-draw-edit-edit"
                href="#"
                title="Edit layers"
              >
                <span
                  class="sr-only"
                >
                  Edit layers
                </span>
              </a>
              <a
                class="leaflet-draw-edit-remove"
                href="#"
                title="Delete layers"
              >
                <span
                  class="sr-only"
                >
                  Delete layers
                </span>
              </a>
            </div>
            <ul
              class="leaflet-draw-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-bottom leaflet-left"
      />
      <div
        class="leaflet-bottom leaflet-right"
      >
        <div
          aria-haspopup="true"
          class="leaflet-control-layers leaflet-control"
        >
          <a
            class="leaflet-control-layers-toggle"
            href="#"
            role="button"
            title="Layers"
          />
          <section
            class="leaflet-control-layers-list"
          >
            <div
              class="leaflet-control-layers-base"
            >
              <label>
                <span>
                  <input
                    class="leaflet-control-layers-selector"
                    name="leaflet-base-layers_48"
                    type="radio"
                  />
                  <span>
                     BC Government
                  </span>
                </span>
              </label>
              <label>
                <span>
                  <input
                    checked="checked"
                    class="leaflet-control-layers-selector"
                    name="leaflet-base-layers_48"
                    type="radio"
                  />
                  <span>
                     Esri Imagery
                  </span>
                </span>
              </label>
            </div>
            <div
              class="leaflet-control-layers-separator"
              style="display: none;"
            />
            <div
              class="leaflet-control-layers-overlays"
            />
          </section>
        </div>
        <div
          class="leaflet-control-attribution leaflet-control"
        >
          <a
            href="https://leafletjs.com"
            title="A JavaScript library for interactive maps"
          >
            <svg
              aria-hidden="true"
              class="leaflet-attribution-flag"
              height="8"
              viewBox="0 0 12 8"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h12v4H0z"
                fill="#4C7BE1"
              />
              <path
                d="M0 4h12v3H0z"
                fill="#FFD500"
              />
              <path
                d="M0 7h12v1H0z"
                fill="#E0BC00"
              />
            </svg>
             Leaflet
          </a>
           
          <span
            aria-hidden="true"
          >
            |
          </span>
           © 
          <a
            href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
          >
            ESRI Basemap
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MapContainer matches the snapshot with non editable geos being passed in 1`] = `
<DocumentFragment>
  <div
    class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
    id="myMap"
    style="height: 100%; position: relative;"
    tabindex="0"
  >
    <div
      class="leaflet-pane leaflet-map-pane"
      style="left: 0px; top: 0px;"
    >
      <div
        class="leaflet-pane leaflet-tile-pane"
      >
        <div
          class="leaflet-layer "
          style="z-index: 2;"
        >
          <div
            class="leaflet-tile-container leaflet-zoom-animated"
            style="z-index: 18; left: 0px; top: 0px;"
          >
            <img
              alt=""
              class="leaflet-tile"
              src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/5/10/4"
              style="width: 256px; height: 256px; left: -159px; top: -31px;"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-pane leaflet-overlay-pane"
      >
        <svg
          height="0"
          pointer-events="none"
          style="left: 0px; top: 0px;"
          viewBox="0 0 0 0"
          width="0"
        >
          <g>
            <path
              class="leaflet-interactive"
              d="M1 -3L0 0L0 -3z"
              fill="#3388ff"
              fill-opacity="0.2"
              fill-rule="evenodd"
              stroke="#3388ff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-opacity="1"
              stroke-width="3"
            />
          </g>
        </svg>
      </div>
      <div
        class="leaflet-pane leaflet-shadow-pane"
      >
        <img
          alt=""
          class="leaflet-marker-shadow leaflet-zoom-hide"
          src="marker-shadow.png"
          style="margin-left: -12px; margin-top: -41px; width: 41px; height: 41px; left: 5771px; top: 1274px;"
        />
      </div>
      <div
        class="leaflet-pane leaflet-marker-pane"
      >
        <img
          alt="Marker"
          class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
          role="button"
          src="marker-icon.png"
          style="margin-left: -12px; margin-top: -41px; width: 25px; height: 41px; left: 5771px; top: 1274px; z-index: 1274;"
          tabindex="0"
        />
      </div>
      <div
        class="leaflet-pane leaflet-tooltip-pane"
      />
      <div
        class="leaflet-pane leaflet-popup-pane"
      />
    </div>
    <div
      class="leaflet-control-container"
    >
      <div
        class="leaflet-top leaflet-left"
      >
        <div
          class="leaflet-control-zoom leaflet-bar leaflet-control"
        >
          <a
            aria-disabled="false"
            aria-label="Zoom in"
            class="leaflet-control-zoom-in"
            href="#"
            role="button"
            title="Zoom in"
          >
            <span
              aria-hidden="true"
            >
              +
            </span>
          </a>
          <a
            aria-disabled="false"
            aria-label="Zoom out"
            class="leaflet-control-zoom-out"
            href="#"
            role="button"
            title="Zoom out"
          >
            <span
              aria-hidden="true"
            >
              −
            </span>
          </a>
        </div>
        <div
          class="leaflet-control-fullscreen leaflet-bar leaflet-control"
        >
          <a
            class="leaflet-control-fullscreen-button leaflet-bar-part"
            href="#"
            title="View Fullscreen"
          />
        </div>
      </div>
      <div
        class="leaflet-top leaflet-right"
      >
        <div
          class="leaflet-draw leaflet-control"
        >
          <div
            class="leaflet-draw-section"
          >
            <div
              class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top"
            >
              <a
                class="leaflet-draw-draw-polygon"
                href="#"
                title="Draw a polygon"
              >
                <span
                  class="sr-only"
                >
                  Draw a polygon
                </span>
              </a>
              <a
                class="leaflet-draw-draw-rectangle"
                href="#"
                title="Draw a rectangle"
              >
                <span
                  class="sr-only"
                >
                  Draw a rectangle
                </span>
              </a>
              <a
                class="leaflet-draw-draw-marker"
                href="#"
                title="Draw a marker"
              >
                <span
                  class="sr-only"
                >
                  Draw a marker
                </span>
              </a>
            </div>
            <ul
              class="leaflet-draw-actions"
            />
          </div>
          <div
            class="leaflet-draw-section"
          >
            <div
              class="leaflet-draw-toolbar leaflet-bar"
            >
              <a
                class="leaflet-draw-edit-edit"
                href="#"
                title="Edit layers"
              >
                <span
                  class="sr-only"
                >
                  Edit layers
                </span>
              </a>
              <a
                class="leaflet-draw-edit-remove"
                href="#"
                title="Delete layers"
              >
                <span
                  class="sr-only"
                >
                  Delete layers
                </span>
              </a>
            </div>
            <ul
              class="leaflet-draw-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-bottom leaflet-left"
      />
      <div
        class="leaflet-bottom leaflet-right"
      >
        <div
          aria-haspopup="true"
          class="leaflet-control-layers leaflet-control"
        >
          <a
            class="leaflet-control-layers-toggle"
            href="#"
            role="button"
            title="Layers"
          />
          <section
            class="leaflet-control-layers-list"
          >
            <div
              class="leaflet-control-layers-base"
            >
              <label>
                <span>
                  <input
                    class="leaflet-control-layers-selector"
                    name="leaflet-base-layers_81"
                    type="radio"
                  />
                  <span>
                     BC Government
                  </span>
                </span>
              </label>
              <label>
                <span>
                  <input
                    checked="checked"
                    class="leaflet-control-layers-selector"
                    name="leaflet-base-layers_81"
                    type="radio"
                  />
                  <span>
                     Esri Imagery
                  </span>
                </span>
              </label>
            </div>
            <div
              class="leaflet-control-layers-separator"
              style="display: none;"
            />
            <div
              class="leaflet-control-layers-overlays"
            />
          </section>
        </div>
        <div
          class="leaflet-control-attribution leaflet-control"
        >
          <a
            href="https://leafletjs.com"
            title="A JavaScript library for interactive maps"
          >
            <svg
              aria-hidden="true"
              class="leaflet-attribution-flag"
              height="8"
              viewBox="0 0 12 8"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h12v4H0z"
                fill="#4C7BE1"
              />
              <path
                d="M0 4h12v3H0z"
                fill="#FFD500"
              />
              <path
                d="M0 7h12v1H0z"
                fill="#E0BC00"
              />
            </svg>
             Leaflet
          </a>
           
          <span
            aria-hidden="true"
          >
            |
          </span>
           © 
          <a
            href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
          >
            ESRI Basemap
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MapContainer sets the bounds of the geo being passed in successfully 1`] = `
<DocumentFragment>
  <div
    class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
    id="myMap"
    style="height: 100%; position: relative;"
    tabindex="0"
  >
    <div
      class="leaflet-pane leaflet-map-pane"
      style="left: 0px; top: 0px;"
    >
      <div
        class="leaflet-pane leaflet-tile-pane"
      >
        <div
          class="leaflet-layer "
          style="z-index: 2;"
        >
          <div
            class="leaflet-tile-container leaflet-zoom-animated"
            style="z-index: 18; left: 0px; top: 0px;"
          >
            <img
              alt=""
              class="leaflet-tile"
              src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/0/0/0"
              style="width: 256px; height: 256px; left: -38px; top: -79px;"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-pane leaflet-overlay-pane"
      >
        <svg
          height="0"
          pointer-events="none"
          style="left: 0px; top: 0px;"
          viewBox="0 0 0 0"
          width="0"
        >
          <g>
            <path
              class="leaflet-interactive"
              d="M-1 2L0 -2z"
              fill="#3388ff"
              fill-opacity="0.2"
              fill-rule="evenodd"
              stroke="#3388ff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-opacity="1"
              stroke-width="3"
            />
          </g>
        </svg>
      </div>
      <div
        class="leaflet-pane leaflet-shadow-pane"
      />
      <div
        class="leaflet-pane leaflet-marker-pane"
      />
      <div
        class="leaflet-pane leaflet-tooltip-pane"
      />
      <div
        class="leaflet-pane leaflet-popup-pane"
      />
    </div>
    <div
      class="leaflet-control-container"
    >
      <div
        class="leaflet-top leaflet-left"
      >
        <div
          class="leaflet-control-zoom leaflet-bar leaflet-control"
        >
          <a
            aria-disabled="false"
            aria-label="Zoom in"
            class="leaflet-control-zoom-in"
            href="#"
            role="button"
            title="Zoom in"
          >
            <span
              aria-hidden="true"
            >
              +
            </span>
          </a>
          <a
            aria-disabled="true"
            aria-label="Zoom out"
            class="leaflet-control-zoom-out leaflet-disabled"
            href="#"
            role="button"
            title="Zoom out"
          >
            <span
              aria-hidden="true"
            >
              −
            </span>
          </a>
        </div>
        <div
          class="leaflet-control-fullscreen leaflet-bar leaflet-control"
        >
          <a
            class="leaflet-control-fullscreen-button leaflet-bar-part"
            href="#"
            title="View Fullscreen"
          />
        </div>
      </div>
      <div
        class="leaflet-top leaflet-right"
      >
        <div
          class="leaflet-draw leaflet-control"
        >
          <div
            class="leaflet-draw-section"
          >
            <div
              class="leaflet-draw-toolbar leaflet-bar leaflet-draw-toolbar-top"
            >
              <a
                class="leaflet-draw-draw-polygon"
                href="#"
                title="Draw a polygon"
              >
                <span
                  class="sr-only"
                >
                  Draw a polygon
                </span>
              </a>
              <a
                class="leaflet-draw-draw-rectangle"
                href="#"
                title="Draw a rectangle"
              >
                <span
                  class="sr-only"
                >
                  Draw a rectangle
                </span>
              </a>
              <a
                class="leaflet-draw-draw-marker"
                href="#"
                title="Draw a marker"
              >
                <span
                  class="sr-only"
                >
                  Draw a marker
                </span>
              </a>
            </div>
            <ul
              class="leaflet-draw-actions"
            />
          </div>
          <div
            class="leaflet-draw-section"
          >
            <div
              class="leaflet-draw-toolbar leaflet-bar"
            >
              <a
                class="leaflet-draw-edit-edit"
                href="#"
                title="Edit layers"
              >
                <span
                  class="sr-only"
                >
                  Edit layers
                </span>
              </a>
              <a
                class="leaflet-draw-edit-remove"
                href="#"
                title="Delete layers"
              >
                <span
                  class="sr-only"
                >
                  Delete layers
                </span>
              </a>
            </div>
            <ul
              class="leaflet-draw-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="leaflet-bottom leaflet-left"
      />
      <div
        class="leaflet-bottom leaflet-right"
      >
        <div
          aria-haspopup="true"
          class="leaflet-control-layers leaflet-control"
        >
          <a
            class="leaflet-control-layers-toggle"
            href="#"
            role="button"
            title="Layers"
          />
          <section
            class="leaflet-control-layers-list"
          >
            <div
              class="leaflet-control-layers-base"
            >
              <label>
                <span>
                  <input
                    class="leaflet-control-layers-selector"
                    name="leaflet-base-layers_152"
                    type="radio"
                  />
                  <span>
                     BC Government
                  </span>
                </span>
              </label>
              <label>
                <span>
                  <input
                    checked="checked"
                    class="leaflet-control-layers-selector"
                    name="leaflet-base-layers_152"
                    type="radio"
                  />
                  <span>
                     Esri Imagery
                  </span>
                </span>
              </label>
            </div>
            <div
              class="leaflet-control-layers-separator"
              style="display: none;"
            />
            <div
              class="leaflet-control-layers-overlays"
            />
          </section>
        </div>
        <div
          class="leaflet-control-attribution leaflet-control"
        >
          <a
            href="https://leafletjs.com"
            title="A JavaScript library for interactive maps"
          >
            <svg
              aria-hidden="true"
              class="leaflet-attribution-flag"
              height="8"
              viewBox="0 0 12 8"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h12v4H0z"
                fill="#4C7BE1"
              />
              <path
                d="M0 4h12v3H0z"
                fill="#FFD500"
              />
              <path
                d="M0 7h12v1H0z"
                fill="#E0BC00"
              />
            </svg>
             Leaflet
          </a>
           
          <span
            aria-hidden="true"
          >
            |
          </span>
           © 
          <a
            href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
          >
            ESRI Basemap
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
